<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homePageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_page_header"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/welcomeText"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteButton"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/white_button"
                android:text="Delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addButton"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/white_button"
                android:text="Add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/deleteButton"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logoutButton"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:background="@drawable/white_button"
                android:text="Logout"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titlePageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="ItemManager"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/HomescreenHiddenImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/titlePageText"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectButton"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/white_button"
                android:text="Select"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="69dp"
                app:layout_constraintEnd_toStartOf="@+id/addButton"
                app:layout_constraintStart_toEndOf="@+id/deleteButton"
                app:layout_constraintTop_toTopOf="@+id/deleteButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        android:layout_marginBottom="135dp"
        android:horizontalSpacing="15dp"
        android:numColumns="3"
        android:paddingHorizontal="15dp"
        android:verticalSpacing="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/dark_green"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/totalValueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Total Value: "
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sortButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/white_button"
        android:text="Sort By:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filterButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/white_button"
        android:text=" Filter Date:"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sortButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/take_picture_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/white_button"
        android:text="CAMERA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/search_button"
        android:iconifiedByDefault="false"
        android:padding="8dp"
        android:textColor="#9AA2AA"
        app:layout_constraintBottom_toTopOf="@+id/gridView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scanButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/white_button"
        android:text="Scan"
        app:layout_constraintEnd_toStartOf="@+id/take_picture_button"
        app:layout_constraintTop_toTopOf="@+id/filterButton" />

</androidx.constraintlayout.widget.ConstraintLayout>