<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_background"
    android:id="@+id/loginWindow"
    tools:context=".loginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:windowSoftInputMode="adjustResize"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="32dp"
            android:textStyle="bold"
            android:windowSoftInputMode="adjustResize">

        </TextView>

        <EditText
            android:id="@+id/userName_Input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/keepitall_clickbox"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="8dp"
            android:hint="Username"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black">

        </EditText>

        <EditText
            android:id="@+id/password_Input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/keepitall_clickbox"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="8dp"
            android:hint="password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"></EditText>

        <Button
            android:id="@+id/login_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"></Button>

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="1dp"
            android:text="@string/need_an_account"
            android:textAlignment="gravity"
            android:textSize="14sp">

        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:text="KeepItAll"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Title_subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="casual"
        android:text="For all your Belongings"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppName"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>