...
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortDescriptionButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sortValueButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/green_button"
        android:text="Estimated Value"
...
