...
        android:id="@+id/homeButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
        app:layout_constraintStart_toEndOf="@+id/galleryButton"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="350dp"
...
